--- a/static/style.css
+++ b/static/style.css
@@ -11,13 +11,21 @@ html, body{
 .login-container{
     position: absolute;
     top: 50%;
-    left: 70%;
+    left: 64%;
     transform: translate(-50%, -50%);
-    background-color: rgba(255, 255, 255, 0.9);
-    padding: 20px;
+    padding: 30px;
     border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
 
-    width: 250px;
+    width: 300px;
     text-align: center;
+}
+
+.input[type="text"], input[type="password"], input[type="text"], input[type="usuario"]{
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
 }
