--- a/templates/login.html
+++ b/templates/login.html
@@ -3,20 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LF frota veículo</title>
+    <title>LF Frota Veículo</title>
     <link rel="stylesheet" href="../static/style.css">
 </head>
-<body>
-    
-       <div class="login-container">
+<body class="login-page">
+    <div class="login-container">
         <form action="#" method="post">
             <input type="text" name="usuario" placeholder="Usuário" required>
             <br>
             <input type="password" name="senha" placeholder="Senha" required>
-            <br>
-            <br>
+            <br><br>
             <button type="submit">Entrar</button>
         </form>
-       </div>
+    </div>
+    <footer>
+    <p>© 2025 Todos os direitos reservados — <strong>LF Frota Veículos</strong></p>
+</footer>
+
 </body>
 </html>
+
