--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -15,11 +15,11 @@
         </div>
 
         <ul class="sidebar-menu">
-            <li><a href="{{ url_for('perfil') }}">👤 Perfil</a></li>
-            <li><a href="{{ url_for('veiculo') }}">🚗 Veículo</a></li>
-            <li><a href="{{ url_for('manutencao') }}">🛠️ Manutenção</a></li>
-            <li><a href="{{ url_for('relatorio') }}">📊 Relatório</a></li>
-            <li><a href="{{ url_for('configuracoes') }}">⚙️ Configurações</a></li>
+            <li><a href="{{ url_for('perfil_bp.perfil') }}">👤 Perfil</a></li>
+            <li><a href="{{ url_for('veiculo_bp.veiculo') }}">🚗 Veículo</a></li>
+            <li><a href="{{ url_for('manutencao_bp.manutencao') }}">🛠️ Manutenção</a></li>
+            <li><a href="{{ url_for('relatorio_bp.relatorio') }}">📊 Relatório</a></li>
+            <li><a href="{{ url_for('configuracoes_bp.configuracoes') }}">Configurações</a></li>
         </ul>
     </div>
 
