--- a/static/style.css
+++ b/static/style.css
@@ -3,7 +3,6 @@ html, body {
     padding: 0;
     height: 100%;
     width: 100%;
-    background-color: #044C3D;
 }
 
 body.login-page {
@@ -215,3 +214,12 @@ textarea:focus {
     box-shadow: 0 0 6px rgba(4,76,61,0.3);
 }
 
+.btn-veiculos {
+            background-color: #044C3D;
+            color: white;
+            border: none;
+        }
+        .btn-veiculos:hover {
+            background-color: #03352a;
+            color: white;
+        }
