--- a/templates/veiculo.html
+++ b/templates/veiculo.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Veículos - LF Frota Veículos</title>
-
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Seu CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+
 </head>
 <body class="bg-light">
     <div class="container mt-5 mb-5">
         <div class="veiculo-container p-4 bg-white rounded shadow-sm">
-            <h1 class="text-center mb-4" style="color:#044C3D;">Cadastro de Veículos</h1>
+            <div class="d-flex justify-content-between align-items-center mb-4">
+                <h1 style="color:#044C3D;">Cadastro de Veículos</h1>
+                <a href="/veiculos" class="btn btn-veiculos">
+                    <i class="bi bi-car-front-fill me-2"></i>Ver Veículos Cadastrados
+                </a>
+            </div>
 
             <form action="/veiculo" method="post" class="row g-3">
                 <div class="col-md-6">
@@ -95,7 +98,7 @@
         </div>
     </div>
 
-    <!-- Bootstrap JS -->
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
