--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -15,11 +15,12 @@
         </div>
 
         <ul class="sidebar-menu">
-            <li><a href="{{ url_for('perfil_bp.perfil') }}">👤 Perfil</a></li>
-            <li><a href="{{ url_for('veiculo_bp.veiculo') }}">🚗 Veículo</a></li>
-            <li><a href="{{ url_for('manutencao_bp.manutencao') }}">🛠️ Manutenção</a></li>
-            <li><a href="{{ url_for('relatorio_bp.relatorio') }}">📊 Relatório</a></li>
-            <li><a href="{{ url_for('configuracoes_bp.configuracoes') }}">Configurações</a></li>
+            <li><a href="/perfil">👤 Perfil</a></li>
+            <li><a href="/veiculo">🚗 Veículo</a></li>
+            <li><a href="/manutencao">🛠️ Manutenção</a></li>
+            <li><a href="/relatorio">📊 Relatório</a></li>
+            <li><a href="/configuracoes">⚙️ Configurações</a></li>
+            <li><a href="/logout">🚪 Sair</a></li>
         </ul>
     </div>
 
@@ -36,9 +37,9 @@
                 </tr>
             </thead>
             <tbody>
-                <tr><td>Total de Veículos</td><td>25</td></tr>
-                <tr><td>Veículos Ativos</td><td>20</td></tr>
-                <tr><td>Veículos em Manutenção</td><td>5</td></tr>
+                <tr><td>Total de Veículos</td><td>{{ total_veiculos }}</td></tr>
+                <tr><td>Veículos Ativos</td><td>{{ ativos }}</td></tr>
+                <tr><td>Veículos em Manutenção</td><td>{{ manutencao }}</td></tr>
                 <tr><td>Últimas Manutenções Realizadas</td><td>12/10/2025 - Troca de óleo (Carro 08)</td></tr>
                 <tr><td>Alerta / Próxima Manutenção</td><td>20/10/2025 - Revisão preventiva (Carro 14)</td></tr>
                 <tr><td>Resumo de Custos</td><td>R$ 12.400,00 (Último mês)</td></tr>
