--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -17,7 +17,7 @@
         <ul class="sidebar-menu">
             <li><a href="/perfil">👤 Perfil</a></li>
             <li><a href="/veiculo">🚗 Veículo</a></li>
-            <li><a href="/manutencao">🛠️ Manutenção</a></li>
+            <li><a href="/manutencoes">🛠️ Manutenções</a></li>
             <li><a href="/relatorio">📊 Relatório</a></li>
             <li><a href="/configuracoes">⚙️ Configurações</a></li>
             <li><a href="/logout">🚪 Sair</a></li>
