--- a/templates/login.html
+++ b/templates/login.html
@@ -16,7 +16,9 @@
             <br>
             <input type="password" name="senha" placeholder="Senha" required>
             <br><br>
-            <button type="submit" class="btn btn-primary w-100">Entrar</button>
+            <button type="submit" class="btn btn-primary w-100" style="background-color: #044C3D; border-color: #044C3D;">
+  Entrar</button>
+
         </form>
 
         {% if erro %}
